Add denominations as you operate cash transactions